--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ dist-ssr
 *.sln
 *.sw?
 *.env
+
+ecom-try-fullstack-2-firebase-adminsdk-86lsr-af05397965.json
+ecom-try-fullstack-firebase-adminsdk-isqcb-b6ce1693e2.json
