--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.437.0",
+    "@aws-sdk/s3-request-presigner": "^3.437.0",
     "aws-sdk": "^2.1431.0",
+    "aws-sdk-js-codemod": "^0.25.2",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
