--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1431.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.1",
     "intasend-node": "^1.0.7",
-    "nodemailer": "^6.9.5",
+    "nodemailer": "^6.9.5"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
